Made changes to html/css files after putting through HTML and CSS validators

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
-            <a href="home.html" id="logo-wordmark" class="main_nav_item">
+            <a href="home.html" class="main_nav_item logo-wordmark">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
@@ -45,7 +45,7 @@
             </a>
             <div class="mobile-links">
               <div class="logo_nav">
-                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" class="logo-wordmark"></a>
               </div>
               <div class="icon_nav">
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
@@ -81,9 +81,9 @@
             We are the OlderBrother.
           </p>
         </div>
-        <div id="about-detail">
+        <div class="about-detail">
           <div id="about-img-item">
-            <video muted autoplay loop controls width="100%" >
+            <video muted autoplay loop controls>
               <source src="img/olderbrother.mp4" type="video/mp4">
             </video>
           </div>
@@ -100,17 +100,17 @@
         </div>
 
         <!-- about-founder -->
-        <div id="about-detail">
+        <div class="about-detail">
           <table>
             <tr>
               <td class="about-table">
-                <img src="img/BOBBY BONAPARTE.jpg" alt="Founders">
+                <img src="img/BOBBY-BONAPARTE.jpg" alt="Founders">
                 <h4>Bobby Bonaparte</h4>
                 <span class="iconfont"><a href="https://twitter.com/bonapartebobby" target="_blank" title="View Twitter">&#xe84c;</a></span>
                 <span class="iconfont"><a href="https://www.instagram.com/bonapartebobby" title="View Instagram" target="_blank">&#xe6fc;</a></span>
               </td>
               <td>
-                <img src="img/MAX KINGERY.jpg"  alt="Founders">
+                <img src="img/MAX-KINGERY.jpg"  alt="Founders">
                 <h4>Max Kingery</h4>
                 <span class="iconfont"><a href="https://twitter.com/olderbrotherus" target="_blank" title="View Twitter">&#xe84c;</a></span>
                 <span class="iconfont"><a href="https://www.facebook.com/OlderBrother.us/" title="View Facebook" target="_blank">&#xe64e;</a></span>
@@ -147,9 +147,9 @@
               </ul>
             </div>
           </div>
-          <div id="about-detail">
+          <div class="about-detail">
             <div id="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.749597994455!2d-118.47426568502367!3d33.9989649806205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bb678da51095%3A0xf0069676db35c8ab!2sOlderbrother!5e0!3m2!1sen!2sca!4v1571360668286!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.749597994455!2d-118.47426568502367!3d33.9989649806205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bb678da51095%3A0xf0069676db35c8ab!2sOlderbrother!5e0!3m2!1sen!2sca!4v1571360668286!5m2!1sen!2sca" width="600" height="450" allowfullscreen=""></iframe>
             </div>
           </div>
       </section>
