--- a/journal.html
+++ b/journal.html
@@ -22,7 +22,7 @@
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
-            <a href="home.html" id="logo-wordmark" class="main_nav_item">
+            <a href="home.html" class="main_nav_item logo-wordmark">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
@@ -45,7 +45,7 @@
             </a>
             <div class="mobile-links">
               <div class="logo_nav">
-                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" class="logo-wordmark"></a>
               </div>
               <div class="icon_nav">
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
@@ -167,11 +167,9 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html">
-                      <video muted autoplay loop controls width="100%" class="img-link" alt="Behind the Scenes: Aw18">
-                        <source src="img/olderbrother.mp4" type="video/mp4">
-                      </video>
-                    </a>
+                    <video muted autoplay loop controls>
+                      <source src="img/olderbrother.mp4" type="video/mp4" class="img-link">
+                    </video>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Behind the Scenes: Aw18</a>
