--- a/product-page.html
+++ b/product-page.html
@@ -38,7 +38,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Collections</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
@@ -52,7 +52,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Collections</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
@@ -69,7 +69,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Sizes</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
@@ -364,7 +364,7 @@
 
             <div class="block">
               <div class="product_image">
-                <img src="img/classic-shirt-white1.png" alt="Raglan Crew - Tie Dye Sky Indigo" width="400px">
+                <img src="img/classic-shirt-white1.png" alt="Raglan Crew - Tie Dye Sky Indigo" width="400">
               </div>
             </div>
 
@@ -377,7 +377,7 @@
                 <div class="product_options">
                   <div class="size_selector">
                     <label class="text-label">Size</label><br>
-                    <select name="size" class="product_select"><br>
+                    <select name="size" class="product_select">
                       <option value="extra-small">XXS</option>
                       <option value="extra-small">XS</option>
                       <option value="extra-small">S</option>
@@ -389,7 +389,7 @@
 
                   <div class="quantity_selector">
                     <label class="text-label">Quantity</label><br>
-                    <select name="quantity" class="product_select"><br>
+                    <select name="quantity" class="product_select">
                       <option value="one">1</option>
                       <option value="two">2</option>
                       <option value="three">3</option>
