--- a/product_detail1.html
+++ b/product_detail1.html
@@ -22,7 +22,7 @@
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
-            <a href="home.html" id="logo-wordmark" class="main_nav_item">
+            <a href="home.html" class="main_nav_item logo-wordmark">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item current_link">Shop</a>
@@ -45,7 +45,7 @@
             </a>
             <div class="mobile-links">
               <div class="logo_nav">
-                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" class="logo-wordmark"></a>
               </div>
               <div class="icon_nav">
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
@@ -76,7 +76,7 @@
 
           <div class="block">
             <div class="product_image">
-              <img src="img/raglan-crew_tie-dye-sky-indigo1.png" alt="Raglan Crew - Tie Dye Sky Indigo" width="400px">
+              <img src="img/raglan-crew_tie-dye-sky-indigo1.png" alt="Raglan Crew - Tie Dye Sky Indigo" width="400">
             </div>
           </div>
 
@@ -89,7 +89,7 @@
               <div class="product_options">
                 <div class="size_selector">
                   <label class="text-label">Size</label><br>
-                  <select name="size" class="product_select"><br>
+                  <select name="size" class="product_select">
                     <option value="extra-small">XS</option>
                     <option value="medium">M</option>
                     <option value="large">L</option>
@@ -99,7 +99,7 @@
 
                 <div class="quantity_selector">
                   <label class="text-label">Quantity</label><br>
-                  <select name="quantity" class="product_select"><br>
+                  <select name="quantity" class="product_select">
                     <option value="one">1</option>
                     <option value="two">2</option>
                     <option value="three">3</option>
