--- a/style_guide.html
+++ b/style_guide.html
@@ -120,13 +120,13 @@
 
           <label class="text-label">Select fabric colour option:</label><br>
           <div class="radio-color-swatch">
-            <input type="radio" name="color" value="orange"/>
+            <input type="radio" name="color" id="orange"/>
             <label for="orange">Turmeric</label><br>
 
-            <input type="radio" name="color" value="gold"/>
+            <input type="radio" name="color" id="gold"/>
             <label for="gold">Saffron</label><br>
 
-            <input type="radio" name="color" value="blue"/>
+            <input type="radio" name="color" id="blue"/>
             <label for="blue">Indigo</label>
           </div>
 
@@ -139,11 +139,11 @@
           <h4>Sample code:</h4>
           <code>
             &lt;div class="radio-color-swatch"&gt;<br>
-            &nbsp;&lt;input type="radio" name="color" value="orange"/&gt;<br>
+            &nbsp;&lt;input type="radio" name="color" id="orange"/&gt;<br>
             &nbsp;&lt;label for="orange">Turmeric&lt;/label&gt;<br>
-            &nbsp;&lt;input type="radio" name="color" value="gold"/&gt;<br>
+            &nbsp;&lt;input type="radio" name="color" id="gold"/&gt;<br>
             &nbsp;&lt;label for="gold">Saffron&lt;/label&gt;<br>
-            &nbsp;&lt;input type="radio" name="color" value="blue"/&gt;<br>
+            &nbsp;&lt;input type="radio" name="color" id="blue"/&gt;<br>
             &nbsp;&lt;label for="blue">Indigo&lt;/label&gt;<br>
             &lt;/div&gt;
           </code>
@@ -216,7 +216,7 @@
             <!-- Desktop Navigation -->
             <div class="desktop_nav">
               <nav class="main_nav">
-                <a href="home.html" id="logo-wordmark" class="main_nav_item">
+                <a href="home.html" class="main_nav_item logo-wordmark">
                   <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
                 </a>
                 <a href="shop.html" class="main_nav_item current_link">Shop</a>
@@ -239,7 +239,7 @@
                 </a>
                 <div class="mobile-links">
                   <div class="logo_nav">
-                    <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+                    <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" class="logo-wordmark"></a>
                   </div>
                   <div class="icon_nav">
                     <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
@@ -421,12 +421,12 @@
           <!-- Imagery that represent the Brand -->
           <div class="container">
             <div id="brand-imagery">
-              <div class="block"><img src="img/imagery01.jpg"></div>
-              <div class="block"><img src="img/imagery02.jpg"></div>
-              <div class="block"><img src="img/imagery03.jpg"></div>
-              <div class="block"><img src="img/imagery05.jpg"></div>
-              <div class="block"><img src="img/imagery04.jpg"></div>
-              <div class="block"><img src="img/imagery06.jpg"></div>
+              <div class="block"><img src="img/imagery01.jpg" alt="Saffron-dyed clothing hanging on a rack."></div>
+              <div class="block"><img src="img/imagery02.jpg" alt="Girl in white holding pampas grass."></div>
+              <div class="block"><img src="img/imagery03.jpg" alt="Penned illustration of a shirt being dyed."></div>
+              <div class="block"><img src="img/imagery05.jpg" alt="Girl wearing t-shirt with Olderbrother logo."></div>
+              <div class="block"><img src="img/imagery04.jpg" alt="Ikebana arrangment of various objects."></div>
+              <div class="block"><img src="img/imagery06.jpg" alt="Interior shot of the Olderbrother retail store."></div>
             </div>
           </div>
 
