--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
         <!-- Desktop Navigation -->
         <div class="desktop_nav">
           <nav class="main_nav">
-            <a href="home.html" id="logo-wordmark" class="main_nav_item">
+            <a href="home.html" class="main_nav_item logo-wordmark">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item current_link">Shop</a>
@@ -45,7 +45,7 @@
             </a>
             <div class="mobile-links">
               <div class="logo_nav">
-                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" class="logo-wordmark"></a>
               </div>
               <div class="icon_nav">
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
@@ -75,7 +75,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Collections</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
@@ -89,7 +89,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Collections</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
@@ -106,7 +106,7 @@
       <details class="toggle-product-filter">
         <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Sizes</h5>
-          <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
+          <i class="material-icons">arrow_drop_down</i>
         </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
