Fix image hover on journal

--- a/journal.html
+++ b/journal.html
@@ -71,16 +71,17 @@
     <!-- COMPANY UPDATES / EVENTS -->
     <div id="journal_overview">
 
-          <div id="journal-items">
-            <!-- <img src=""img/01.jpg"" alt=""> -->
-            <div class="items-text">
-              <img src="img/journal.png" alt="this is a journal image">
-              <a href="#journal"><h1>Journal</h1></a>
-            </div>
-          </div>
+      <div id="journal-items">
+        <!-- <img src=""img/01.jpg"" alt=""> -->
+        <div class="items-text">
+          <img src="img/journal.png" alt="this is a journal image">
+          <a href="#journal"><h1>Journal</h1></a>
+        </div>
+      </div>
 
-          <section id="journal">
+        <section id="journal">
           <div class="main_journal">
+
             <div class="box">
               <div class="box-image">
                 <div class="image-link-container">
@@ -93,98 +94,106 @@
                 </div>
               </div>
               <div class="box-text">
-
                 <h5>Amiel Stanek</h5>
                 <h4 class="article-date">Nov 30, 2016</h4>
               </div>
             </div>
-              <div class="box">
-                <div class="box-image">
-                  <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-02.png" class="img-link" alt="Connecting the Dots"></a>
-                    <div class="img-hover-box">
-                      <div class="img-hover-text">
-                        <a href="journal_detail.html">Connecting the Dots</a>
-                      </div>
+
+            <div class="box">
+              <div class="box-image">
+                <div class="image-link-container">
+                  <a href="journal_detail.html"><img src="img/Journal-img-02.png" class="img-link" alt="Connecting the Dots"></a>
+                  <div class="img-hover-box">
+                    <div class="img-hover-text">
+                      <a href="journal_detail.html">Connecting the Dots</a>
                     </div>
                   </div>
-                </div>
-                <div class="box-text">
-                  <h5>Amanda Ringstad</h5>
-                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
-              <div class="box">
-                <div class="box-image">
-                  <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-03.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
-                    <div class="img-hover-box">
-                      <div class="img-hover-text"><a href="journal_detail.html">
-                      The Gallos - Morning Routine</a></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="box-text">
-                  <h5>@carissajg & @andrewgallo</h5>
-                  <h4 class="article-date">May 02, 2017</h4>
-                </div>
+              <div class="box-text">
+                <h5>Amanda Ringstad</h5>
+                <h4 class="article-date">Nov 30, 2016</h4>
               </div>
             </div>
 
-            <div class="main_journal">
-              <div class="box">
-                <div class="box-image">
-                  <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-04.jpg" class="img-link" alt="An Olderbrother Picnic"></a>
-                    <div class="img-hover-box">
-                      <div class="img-hover-text">
-                        <a href="journal_detail.html">An Olderbrother Picnic</a>
-                      </div>
-                    </div>
+            <div class="box">
+              <div class="box-image">
+                <div class="image-link-container">
+                  <a href="journal_detail.html"><img src="img/Journal-img-03.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
+                  <div class="img-hover-box">
+                    <div class="img-hover-text"><a href="journal_detail.html">
+                    The Gallos - Morning Routine</a></div>
                   </div>
-                </div>
-                <div class="box-text">
-                  <h5>Amanda Ringstad</h5>
-                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
-              <div class="box">
-                <div class="box-image">
-                  <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-05.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
-                    <div class="img-hover-box">
-                      <div class="img-hover-text">
-                        <a href="journal_detail.html">Olderbrother Featured in Bon Appétit</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="box-text">
-                  <h5>Amiel Stanek</h5>
-                  <h4 class="article-date">Nov 30, 2016</h4>
-                </div>
-              </div>
-              <div class="box">
-                <div class="box-image">
-                  <div class="image-link-container">
-                    <video muted autoplay loop controls>
-                      <source src="img/olderbrother.mp4" type="video/mp4" class="img-link">
-                    </video>
-                    <div class="img-hover-box">
-                      <div class="img-hover-text">
-                        <a href="journal_detail.html">Behind the Scenes: Aw18</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="box-text">
-                  <h5>Amanda Ringstad</h5>
-                  <h4 class="article-date">Nov 30, 2016</h4>
-                </div>
+              <div class="box-text">
+                <h5>@carissajg & @andrewgallo</h5>
+                <h4 class="article-date">May 02, 2017</h4>
               </div>
             </div>
+
+          </div>
+
+          <div class="main_journal">
+
+            <div class="box">
+              <div class="box-image">
+                <div class="image-link-container">
+                  <a href="journal_detail.html"><img src="img/Journal-img-04.jpg" class="img-link" alt="An Olderbrother Picnic"></a>
+                  <div class="img-hover-box">
+                    <div class="img-hover-text">
+                      <a href="journal_detail.html">An Olderbrother Picnic</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-text">
+                <h5>Amanda Ringstad</h5>
+                <h4 class="article-date">Nov 30, 2016</h4>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="box-image">
+                <div class="image-link-container">
+                  <a href="journal_detail.html"><img src="img/Journal-img-05.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                  <div class="img-hover-box">
+                    <div class="img-hover-text">
+                      <a href="journal_detail.html">Olderbrother Featured in Bon Appétit</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-text">
+                <h5>Amiel Stanek</h5>
+                <h4 class="article-date">Nov 30, 2016</h4>
+              </div>
+            </div>
+
+            <div class="box">
+              <div class="box-image">
+                <div class="image-link-container">
+                  <div class="img-link">
+                    <video muted autoplay loop controls>
+                      <source src="img/olderbrother.mp4" type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="img-hover-box">
+                    <div class="img-hover-text">
+                      <a href="journal_detail.html">Behind the Scenes: Aw18</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-text">
+                <h5>Amanda Ringstad</h5>
+                <h4 class="article-date">Nov 30, 2016</h4>
+              </div>
+            </div>
+
+        </div>
       </section>
-</div>
+  </div>
 
   <footer class="page_footer">
 
