--- a/style_guide.html
+++ b/style_guide.html
@@ -154,7 +154,7 @@
         <section class="element">
 
           <!-- Linked Image (for a Journal Page) -->
-          <h3 class="sub_heading">Image as a Link</h3>
+          <h3 class="sub_heading sg-linked-img">Image as a Link</h3>
 
           <div class="box">
             <div class="box-image">
